objects/ccpt__Board_Member__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Board__c</fullName>
        <label>Board</label>
        <referenceTo>ccpt__Board__c</referenceTo>
        <relationshipLabel>Board Members</relationshipLabel>
        <relationshipName>Board_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Board_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__isArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>